# capture_udp_sig

./: .dockerignore  .gitignore  Dockerfile.capture  Dockerfile.capture-lite  README.md  analyze_pcap.py  audit_capture.py  capture.ps1  capture_policy.yaml  compare_architect.py  protocol_modes.yaml  pyproject.toml
browser_capture/: README.md  pyproject.toml
browser_capture/browser_capture/: __init__.py  __main__.py  cli.py
browser_capture/browser_capture/browser/: __init__.py  chromium_session.py  profiles.py
browser_capture/browser_capture/core/: __init__.py  models.py  orchestrator.py  pcap_backend.py
browser_capture/browser_capture/extractors/: __init__.py  quic_chain.py  quic_coalesced.py  quic_udp.py  stun_udp.py
browser_capture/browser_capture/triggers/: __init__.py  base.py  quic_http3.py  webrtc_stun.py
python_signatures/: BROWSER_PROFILES.md  __init__.py  architect_fallbacks.py  base.py  browser_quic_collector.py  browser_stun_collector.py  capture.py  capture_docker.py  capture_policy.yaml  capture_service.py  capture_timeouts.py  client_chain.py  cps_builder.py  dns_collector.py  docker_capture.py  dry_run_fixtures.py  export_formats.py  export_merged_profile.py  features.py  library_api.py  library_template_collector.py  ntp_collector.py  panel_capture_worker.py  profile_catalog.py  profile_cps.py  profile_variation.py  protocol_verify.py  provenance.py  quic_verify.py  run_all.py  signature_bank.py  sip_dtls_collector.py  slot_policy.py  template_pool.py
scripts/: WSL_NETWORK.md  build_signature_bank.py  build_template_pool.py  docker_capture.sh  (+15 more)
(+104 files in other folders)
