[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-capture"
version = "0.1.0"
description = "Browser-driven UDP capture (Chromium + tcpdump) for QUIC-like signatures"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.61.0,<1.62",
  "scapy>=2.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
browser-capture = "browser_capture.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires tcpdump/playwright",
]
